[gd_scene load_steps=28 format=2]

[ext_resource path="res://assets/skybox/left.jpg" type="Texture" id=1]
[ext_resource path="res://assets/skybox/front.jpg" type="Texture" id=2]
[ext_resource path="res://assets/skybox/back.jpg" type="Texture" id=3]
[ext_resource path="res://assets/skybox/bottom.jpg" type="Texture" id=4]
[ext_resource path="res://assets/skybox/right.jpg" type="Texture" id=5]
[ext_resource path="res://assets/skybox/top.jpg" type="Texture" id=6]
[ext_resource path="res://scripts/SkyBox.gd" type="Script" id=7]
[ext_resource path="res://assets/skybox2/left.jpg" type="Texture" id=8]
[ext_resource path="res://assets/skybox2/right.jpg" type="Texture" id=9]
[ext_resource path="res://assets/skybox2/top.jpg" type="Texture" id=10]
[ext_resource path="res://assets/skybox2/front.jpg" type="Texture" id=11]
[ext_resource path="res://assets/skybox2/back.jpg" type="Texture" id=12]
[ext_resource path="res://assets/skybox2/bottom.jpg" type="Texture" id=13]
[ext_resource path="res://materials/absolute_black.tres" type="Material" id=14]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 200, 200 )

[sub_resource type="SpatialMaterial" id=2]
flags_unshaded = true
albedo_texture = ExtResource( 2 )

[sub_resource type="SpatialMaterial" id=3]
flags_unshaded = true
albedo_texture = ExtResource( 1 )

[sub_resource type="SpatialMaterial" id=4]
flags_unshaded = true
albedo_texture = ExtResource( 5 )

[sub_resource type="SpatialMaterial" id=5]
flags_unshaded = true
albedo_texture = ExtResource( 3 )

[sub_resource type="SpatialMaterial" id=6]
flags_unshaded = true
albedo_texture = ExtResource( 6 )

[sub_resource type="SpatialMaterial" id=7]
flags_unshaded = true
albedo_texture = ExtResource( 4 )

[sub_resource type="SpatialMaterial" id=8]
flags_unshaded = true
albedo_texture = ExtResource( 11 )

[sub_resource type="SpatialMaterial" id=9]
flags_unshaded = true
albedo_texture = ExtResource( 8 )

[sub_resource type="SpatialMaterial" id=10]
flags_unshaded = true
albedo_texture = ExtResource( 9 )

[sub_resource type="SpatialMaterial" id=11]
flags_unshaded = true
albedo_texture = ExtResource( 12 )

[sub_resource type="SpatialMaterial" id=12]
flags_unshaded = true
albedo_texture = ExtResource( 10 )

[sub_resource type="SpatialMaterial" id=13]
flags_unshaded = true
albedo_texture = ExtResource( 13 )

[node name="SkyBox" type="Spatial"]
script = ExtResource( 7 )

[node name="box1" type="Spatial" parent="."]
visible = false

[node name="front" type="MeshInstance" parent="box1"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, -99.5 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="left" type="MeshInstance" parent="box1"]
transform = Transform( -1.62921e-07, 1, -1.62921e-07, 0, -1.62921e-07, -1, -1, -1.62921e-07, 2.65431e-14, -99.5, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 3 )

[node name="right" type="MeshInstance" parent="box1"]
transform = Transform( -1.62921e-07, -1, 1.62921e-07, 0, -1.62921e-07, -1, 1, -1.62921e-07, 2.65431e-14, 99.5, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 4 )

[node name="back" type="MeshInstance" parent="box1"]
transform = Transform( -1, -3.25841e-07, 5.30863e-14, 0, -1.62921e-07, -1, 3.25841e-07, -1, 1.62921e-07, 0, 0, 99.5 )
mesh = SubResource( 1 )
material/0 = SubResource( 5 )

[node name="top" type="MeshInstance" parent="box1"]
transform = Transform( 1, 0, 0, 0, -1, 3.25841e-07, 0, -3.25841e-07, -1, 0, 99.5, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 6 )

[node name="bottom" type="MeshInstance" parent="box1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -99.5, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 7 )

[node name="box2" type="Spatial" parent="."]
visible = false

[node name="front" type="MeshInstance" parent="box2"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, -99.5 )
mesh = SubResource( 1 )
material/0 = SubResource( 8 )

[node name="left" type="MeshInstance" parent="box2"]
transform = Transform( -1.62921e-07, 1, -1.62921e-07, 0, -1.62921e-07, -1, -1, -1.62921e-07, 2.65431e-14, -99.5, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 9 )

[node name="right" type="MeshInstance" parent="box2"]
transform = Transform( -1.62921e-07, -1, 1.62921e-07, 0, -1.62921e-07, -1, 1, -1.62921e-07, 2.65431e-14, 99.5, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 10 )

[node name="back" type="MeshInstance" parent="box2"]
transform = Transform( -1, -3.25841e-07, 5.30863e-14, 0, -1.62921e-07, -1, 3.25841e-07, -1, 1.62921e-07, 0, 0, 99.5 )
mesh = SubResource( 1 )
material/0 = SubResource( 11 )

[node name="top" type="MeshInstance" parent="box2"]
transform = Transform( 1, 0, 0, 0, -1, 3.25841e-07, 0, -3.25841e-07, -1, 0, 99.5, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 12 )

[node name="bottom" type="MeshInstance" parent="box2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -99.5, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 13 )

[node name="box3" type="Spatial" parent="."]
visible = false

[node name="front" type="MeshInstance" parent="box3"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 0, -99.5 )
mesh = SubResource( 1 )
material/0 = ExtResource( 14 )

[node name="left" type="MeshInstance" parent="box3"]
transform = Transform( -1.62921e-07, 1, -1.62921e-07, 0, -1.62921e-07, -1, -1, -1.62921e-07, 2.65431e-14, -99.5, 0, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 14 )

[node name="right" type="MeshInstance" parent="box3"]
transform = Transform( -1.62921e-07, -1, 1.62921e-07, 0, -1.62921e-07, -1, 1, -1.62921e-07, 2.65431e-14, 99.5, 0, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 14 )

[node name="back" type="MeshInstance" parent="box3"]
transform = Transform( -1, -3.25841e-07, 5.30863e-14, 0, -1.62921e-07, -1, 3.25841e-07, -1, 1.62921e-07, 0, 0, 99.5 )
mesh = SubResource( 1 )
material/0 = ExtResource( 14 )

[node name="top" type="MeshInstance" parent="box3"]
transform = Transform( 1, 0, 0, 0, -1, 3.25841e-07, 0, -3.25841e-07, -1, 0, 99.5, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 14 )

[node name="bottom" type="MeshInstance" parent="box3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -99.5, 0 )
mesh = SubResource( 1 )
material/0 = ExtResource( 14 )
